# ExoMind

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
10_Projects/AtlasOps/: Decision-Use-Coalescing.md  Incident-Retrospective-A1.md  _index.md
20_Areas/Engineering/: Reliability.md
30_Resources/Schemas/: benchmark-sample.json
scripts/: bootstrap.sh  index_notes.py  recall.py
src/: main.rs
src/exomind/: cli.py  mcp_bridge.py  server.py
web/app/: globals.css  page.tsx
