[package]
name = "exomind"
version = "0.9.1-beta.1"
edition = "2021"
authors = ["OpenClaw"]
description = "Rust-native CLI for ExoMind knowledge indexing and recall"
license = "MIT"
repository = "https://github.com/zhugez/ExoMind"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
once_cell = "1.18"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[[bin]]
name = "exom"
path = "src/main.rs"
