[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exomind"
version = "0.9.1b1"
description = "Portable knowledge method runtime for OpenClaw/Codex workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.2",
  "networkx>=3.3"
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
all = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]

[project.scripts]
exom = "exomind.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
